Updated dashy pipeline & added homepage template

--- a/.github/workflows/dashy.yaml
+++ b/.github/workflows/dashy.yaml
@@ -1,9 +1,9 @@
 name: Docker Workflow
 on:
   workflow_dispatch:
-#  push:
-#    paths-ignore:
-#      - '**/README.md'
+  push:
+    paths-ignore:
+      - '**/README.md'
 jobs:
   development:
     permissions:
@@ -14,6 +14,7 @@ jobs:
       docker_env: development
       docker_server: ${{ vars.testing_server}}
       docker_path: ${{ vars.docker_path}}
+      docker_project: "dashy"
     secrets:
       server_username: ${{ secrets.server_username }}
   production:
@@ -27,5 +28,6 @@ jobs:
       docker_env: latest
       docker_server: ${{ vars.production_server}}
       docker_path: ${{ vars.docker_path}}
+      docker_project: "dashy"
     secrets:
       server_username: ${{ secrets.server_username }}
