--- a/.github/workflows/homepage.yaml
+++ b/.github/workflows/homepage.yaml
@@ -2,6 +2,8 @@ name: Docker - Homepage Build & Deploy
 on:
   workflow_dispatch:
   push:
+    paths:
+      - homepage/**
     paths-ignore:
       - '**/README.md'
 jobs:
