--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -11,6 +11,7 @@ jobs:
       packages: write
     uses: epichouse/workflow-templates/.github/workflows/docker-build.yaml@main
     with:
+      skip_deploy: true
       docker_env: development
       docker_server: ${{ vars.testing_server}}
       docker_path: ${{ vars.docker_path}}
@@ -25,6 +26,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     uses: epichouse/workflow-templates/.github/workflows/docker-build.yaml@main
     with:
+      skip_deploy: true
       docker_env: latest
       docker_server: ${{ vars.production_server}}
       docker_path: ${{ vars.docker_path}}
